--- a/SmartHome/en.lproj/MainStoryboard.storyboard
+++ b/SmartHome/en.lproj/MainStoryboard.storyboard
@@ -788,6 +788,12 @@
                                     <constraint firstAttribute="height" constant="2" id="qbR-5o-Yat"/>
                                 </constraints>
                             </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="SH_ICON_arrowToBasement.png" translatesAutoresizingMaskIntoConstraints="NO" id="PqF-9t-Wxl">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="71" id="OL5-qP-gse"/>
+                                    <constraint firstAttribute="width" constant="17" id="wv5-0T-pzb"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <gestureRecognizers/>
@@ -800,13 +806,17 @@
                             <constraint firstAttribute="trailing" secondItem="k9b-DK-kGN" secondAttribute="trailing" constant="292" id="Q3r-jH-PQJ"/>
                             <constraint firstItem="MRW-QW-IKf" firstAttribute="top" secondItem="j5T-wz-7MI" secondAttribute="top" constant="20" symbolic="YES" type="default" id="RAu-wh-aU8"/>
                             <constraint firstItem="k9b-DK-kGN" firstAttribute="top" secondItem="xrd-DI-R1u" secondAttribute="top" type="default" id="Rl5-kK-KSh"/>
-                            <constraint firstAttribute="bottom" secondItem="xrd-DI-R1u" secondAttribute="bottom" constant="17" id="S3L-lp-2eG"/>
+                            <constraint firstItem="Cf1-Fd-UnU" firstAttribute="baseline" secondItem="xrd-DI-R1u" secondAttribute="baseline" type="default" id="TOr-aZ-q35"/>
                             <constraint firstItem="M1f-oP-mHI" firstAttribute="centerY" secondItem="j5T-wz-7MI" secondAttribute="centerY" type="default" id="UwX-vh-KH3"/>
+                            <constraint firstItem="Cf1-Fd-UnU" firstAttribute="baseline" secondItem="k9b-DK-kGN" secondAttribute="baseline" type="default" id="VfX-AY-1Xp"/>
+                            <constraint firstAttribute="bottom" secondItem="Cf1-Fd-UnU" secondAttribute="bottom" constant="17" id="Xbt-n2-COD"/>
                             <constraint firstItem="xrd-DI-R1u" firstAttribute="bottom" secondItem="Cf1-Fd-UnU" secondAttribute="bottom" type="default" id="YEb-qd-q6o"/>
                             <constraint firstItem="iJ1-Sq-b0L" firstAttribute="centerX" secondItem="xrd-DI-R1u" secondAttribute="centerX" type="default" id="ZhD-Lv-6sG"/>
+                            <constraint firstAttribute="bottom" secondItem="PqF-9t-Wxl" secondAttribute="bottom" constant="183" id="e0X-56-FAB"/>
                             <constraint firstItem="boR-bM-iTY" firstAttribute="leading" secondItem="j5T-wz-7MI" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="efy-rF-fo9"/>
                             <constraint firstItem="iJ1-Sq-b0L" firstAttribute="centerX" secondItem="M1f-oP-mHI" secondAttribute="centerX" type="default" id="fes-WU-mOl"/>
                             <constraint firstItem="iJ1-Sq-b0L" firstAttribute="trailing" secondItem="j5T-wz-7MI" secondAttribute="trailing" type="default" id="jos-pM-ZUh"/>
+                            <constraint firstItem="PqF-9t-Wxl" firstAttribute="leading" secondItem="j5T-wz-7MI" secondAttribute="leading" constant="416" id="kQY-du-Cdc"/>
                             <constraint firstItem="xrd-DI-R1u" firstAttribute="top" secondItem="Cf1-Fd-UnU" secondAttribute="top" type="default" id="kYT-oS-ioC"/>
                             <constraint firstItem="k9b-DK-kGN" firstAttribute="bottom" secondItem="xrd-DI-R1u" secondAttribute="bottom" type="default" id="mbN-RX-AmS"/>
                             <constraint firstItem="MRW-QW-IKf" firstAttribute="leading" secondItem="j5T-wz-7MI" secondAttribute="leading" constant="172" id="xR1-Wz-eqO"/>
@@ -1261,6 +1271,12 @@
                                     <constraint firstAttribute="height" constant="2" id="hho-fM-waV"/>
                                 </constraints>
                             </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="SH_ICON_arrowToBasement.png" translatesAutoresizingMaskIntoConstraints="NO" id="FMg-7c-U7e">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="17" id="91r-wC-39K"/>
+                                    <constraint firstAttribute="height" constant="71" id="yOu-r6-m3y"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <gestureRecognizers/>
@@ -1281,6 +1297,8 @@
                             <constraint firstItem="x86-NQ-jvQ" firstAttribute="leading" secondItem="uaa-75-8Qp" secondAttribute="leading" type="default" id="nhQ-b0-YQs"/>
                             <constraint firstItem="fEM-CS-d3L" firstAttribute="centerY" secondItem="uaa-75-8Qp" secondAttribute="centerY" type="default" id="psA-I0-lTa"/>
                             <constraint firstAttribute="trailing" secondItem="Wnu-2w-zAA" secondAttribute="trailing" constant="292" id="qtw-Gq-FcI"/>
+                            <constraint firstItem="FMg-7c-U7e" firstAttribute="leading" secondItem="uaa-75-8Qp" secondAttribute="leading" constant="416" id="sGH-w1-w0v"/>
+                            <constraint firstAttribute="bottom" secondItem="FMg-7c-U7e" secondAttribute="bottom" constant="183" id="uSa-93-0K6"/>
                             <constraint firstItem="x86-NQ-jvQ" firstAttribute="trailing" secondItem="uaa-75-8Qp" secondAttribute="trailing" type="default" id="vkr-oN-RDv"/>
                             <constraint firstItem="Edb-4y-U3d" firstAttribute="top" secondItem="91Z-ZH-ueu" secondAttribute="top" type="default" id="xNv-9R-x2F"/>
                         </constraints>
@@ -1453,6 +1471,7 @@
     </scenes>
     <resources>
         <image name="SH_ICON_alarm.png" width="570" height="570"/>
+        <image name="SH_ICON_arrowToBasement.png" width="114" height="570"/>
         <image name="SH_ICON_coffee.png" width="570" height="570"/>
         <image name="SH_ICON_fridge.png" width="570" height="570"/>
         <image name="SH_ICON_heating.png" width="570" height="570"/>
@@ -1478,15 +1497,89 @@
         <image name="SH_PIC_livingroom.png" width="4070" height="2850"/>
         <image name="SH_PIC_wholehouse.png" width="4104" height="2850"/>
     </resources>
+    <classes>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="SHBasementVC" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SHBasementVC.h"/>
+            <relationships>
+                <relationship kind="action" name="backToSH:"/>
+                <relationship kind="action" name="laundryButtonTouchUp:" candidateClass="UIButton"/>
+                <relationship kind="action" name="lightButtonTouchUp:" candidateClass="UIButton"/>
+            </relationships>
+        </class>
+        <class className="SHBathroomVC" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SHBathroomVC.h"/>
+            <relationships>
+                <relationship kind="action" name="backToSH:"/>
+                <relationship kind="action" name="heatingButtonTouchUp:" candidateClass="UIButton"/>
+                <relationship kind="action" name="lightButtonTouchUp:" candidateClass="UIButton"/>
+                <relationship kind="action" name="radioButtonTouchUp:" candidateClass="UIButton"/>
+                <relationship kind="action" name="whirlpoolButtonTouchUp:" candidateClass="UIButton"/>
+            </relationships>
+        </class>
+        <class className="SHBedroomVC" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SHBedroomVC.h"/>
+            <relationships>
+                <relationship kind="action" name="backToSH:"/>
+                <relationship kind="action" name="heatingButtonTouchUp:" candidateClass="UIButton"/>
+                <relationship kind="action" name="lightButtonTouchUp:" candidateClass="UIButton"/>
+                <relationship kind="action" name="soundButtonTouchUp:" candidateClass="UIButton"/>
+            </relationships>
+        </class>
+        <class className="SHEntranceVC" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SHEntranceVC.h"/>
+            <relationships>
+                <relationship kind="action" name="alarmButtonTouchUp:" candidateClass="UIButton"/>
+                <relationship kind="action" name="backToSH:"/>
+                <relationship kind="action" name="lightButtonTouchUp:" candidateClass="UIButton"/>
+            </relationships>
+        </class>
+        <class className="SHKitchenVC" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SHKitchenVC.h"/>
+            <relationships>
+                <relationship kind="action" name="backToSH:"/>
+                <relationship kind="action" name="coffeeButtonTouchUp:" candidateClass="UIButton"/>
+                <relationship kind="action" name="cookerButtonTouchUp:" candidateClass="UIButton"/>
+                <relationship kind="action" name="fridgeButtonTouchUp:" candidateClass="UIButton"/>
+                <relationship kind="action" name="heatingButtonTouchUp:" candidateClass="UIButton"/>
+                <relationship kind="action" name="lightButtonTouchUp:" candidateClass="UIButton"/>
+            </relationships>
+        </class>
+        <class className="SHLivingroomVC" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SHLivingroomVC.h"/>
+            <relationships>
+                <relationship kind="action" name="backToSH:" candidateClass="UIButton"/>
+                <relationship kind="action" name="heatingButtonTouchUp:" candidateClass="UIButton"/>
+                <relationship kind="action" name="lightButtonTouchUp:" candidateClass="UIButton"/>
+                <relationship kind="action" name="phoneButtonTouchUp:" candidateClass="UIButton"/>
+                <relationship kind="action" name="stereoButtonTouchUp:" candidateClass="UIButton"/>
+                <relationship kind="action" name="tvButtonTouchUP:" candidateClass="UIButton"/>
+            </relationships>
+        </class>
+        <class className="SHTabHeatingVC" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SHTabHeatingVC.h"/>
+        </class>
+        <class className="SHTabJalousieVC" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SHTabJalousieVC.h"/>
+        </class>
+        <class className="SHTabLightVC" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SHTabLightVC.h"/>
+        </class>
+        <class className="SHViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SHViewController.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar" statusBarStyle="blackTranslucent"/>
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="OSa-iG-1p0"/>
-        <segue reference="Uwy-j3-2xz"/>
-        <segue reference="rCQ-B2-EuM"/>
+        <segue reference="hfN-Q2-2mc"/>
         <segue reference="XLg-z8-e8c"/>
+        <segue reference="4Ml-eS-lwi"/>
+        <segue reference="4lW-4p-kEl"/>
     </inferredMetricsTieBreakers>
 </document>
